           h-size policy to 'Ignore'. (Tim)
        - Fixed trackinfo spinboxes only go to 99 - changed some trackinfo ui spinbox properties
           (maxValue -> maximum, minValue -> minimum etc). (Tim)
        - Fixed SpinBoxFP class. Was never right before. (Tim)
        - Fixed transform and input transform ui files and dialogs - using the corrected SpinBoxFP. (Tim)   
25.11.2010
        - Fixed column widths, alignments, device renaming and jack device creation issues in synthconfigbase.
          Somehow the last changelog entry about this didn't get committed. That's added too. (Orcan)
24.11.2010
        - Resinstated the Midi Transformer. Was left out when both TF and iTF were removed, and then I 
           asked for them to be put back. So yes, transformbase.ui is used now. (Tim)
        - Completed conversion of waveedit(.cpp, h), including menus and shortcuts. Should be done. (Tim)
        - Set undo/redo shortcuts on global undoAction/redoAction, instead of Q3Accel in each window. (Tim)
        - Fixed some leftover setAccel()'s in app.cpp (Tim) 
        - Fixed delete shortcut key. Set in MusE constructor. (Tim)
        - Reinstated special Toplevel::CLIPLIST case in MusE::toplevelDeleted(). Caused problems. (Tim)
          TODO: Still not right with the menu checkmark...
        - Ported rhythmbase, fluidsynthgui, fluidgui to Qt4 (Orcan)
        - Removed patchbaybase from the project (Orcan)
        - Added ENABLE_EXPERIMENTAL flag to cmake. Marked rhythmbase, s1 experimental (Orcan)
        - Fixed a connection in miditransform (Orcan)
        - Fixed crash in FluidSynthGui::channelItemClicked(): Use item->row() for the channel. Test OK. (Tim)
        - Start porting synthconfigbase. It's mostly functional. TODO: Column widths and alignments,
          renaming device name, port Q3WhatsThis bits (Orcan)
23.11.2010
        - Added Track::cname(), applied to strip labels' object names, so they may be used in style sheets. (Tim)